Separate status component and center board on page

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -4,6 +4,8 @@
   display: table;
 }
 
-.status {
-  margin-bottom: 10px;
+.board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
