--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,8 +1,5 @@
 .game {
   display: flex;
-  flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
+  flex-direction: column;
+  justify-content: center;
 }
